source/objects/Knowledge__kav/fields/Article_Active__c.field-meta.xml
<CustomField>
    <fullName>Article_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>