source/objects/Knowledge__kav/fields/Article_Audience__c.field-meta.xml
<CustomField>
    <fullName>Article_Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Audience</valueSetName>
    </valueSet>
</CustomField>