source/objects/Knowledge__kav/fields/Article_Chat_Answer__c.field-meta.xml
<CustomField>
    <fullName>Article_Chat_Answer__c</fullName>
    <label>Chat Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>