source/objects/Knowledge__kav/fields/Article_Details__c.field-meta.xml
<CustomField>
    <fullName>Article_Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>