source/objects/Knowledge__kav/fields/Article_Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Article_Display_Sequence__c</fullName>
    <label>Display_Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>