source/objects/Knowledge__kav/fields/Article_SiteCategory__c.field-meta.xml
<CustomField>
    <fullName>Article_SiteCategory__c</fullName>
    <label>SiteCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SiteCategories</valueSetName>
    </valueSet>
</CustomField>