source/objects/Knowledge__kav/fields/Article_SiteSubCategory__c.field-meta.xml
<CustomField>
    <fullName>Article_SiteSubCategory__c</fullName>
    <label>Site Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SiteSubCategories</valueSetName>
    </valueSet>
</CustomField>