source/objects/Knowledge__kav/fields/Article_Support_Site_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Article_Support_Site_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Site Sub Category</label>
    <referenceTo>BluescapeSupport_Site_Sub_Category__c</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Knowledge_Article_Support_Site_Sub_Cate2</relationshipName>
    <type>Lookup</type>
</CustomField>