source/objects/Knowledge__kav/fields/Workspace_Assets_AssetType__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Assets_AssetType__c</fullName>
    <label>AssetType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WorkspaceAssetTypes</valueSetName>
    </valueSet>
</CustomField>