source/objects/Knowledge__kav/listViews/Active_Articles.listView-meta.xml
<ListView>
    <fullName>Active_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>URL_NAME</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>notEqual</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_CSP</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_PKB</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>notContain</operation>
        <value>workspace Assets:,course:,course series</value>
    </filters>
    <label>Community Articles (Vis Customer/Public)</label>
</ListView>