source/objects/Knowledge__kav/listViews/Active_Other_Articles.listView-meta.xml
<ListView>
    <fullName>Active_Other_Articles</fullName>
    <columns>TITLE</columns>
    <columns>URL_NAME</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Articles</label>
    <sharedTo>
        <role>Community_Manager</role>
        <role>Salesforce_Admin</role>
        <role>Technical_Writer</role>
    </sharedTo>
</ListView>