source/objects/Knowledge__kav/listViews/Draft_Articles.listView-meta.xml
<ListView>
    <fullName>Draft_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Brian Naughton,Jenna England</value>
    </filters>
    <label>Draft Articles</label>
</ListView>